# haystack-pydoc-tools

./: README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/haystack_pydoc_tools/: __about__.py  cli.py  loaders.py  renderers.py
tests/: test_basic.py  test_cli.py  test_loaders.py  test_renderers.py
tests/test_files/: dataclasses.yml  expected_generators_api.md  generators_api.yml  preprocessors_api.yml  preprocessors_api_output.md  simpler_generators_api.yml
tests/test_files/components/: document_splitter.py
tests/test_files/components/generators/chat/: azure.py  openai.py
tests/test_files/dataclasses/: byte_stream.py
