[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haystack-pydoc-tools"
dynamic = ["version"]
description = 'Pydoc custom tools for Haystack docs'
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Massimiliano Pippi", email = "mpippi@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "griffe",
  "griffe2md",
  "pyyaml",
  "black", # black is used for formatting the code by griffe2md. Do not remove it.
]

[project.scripts]
haystack-pydoc = "haystack_pydoc_tools.cli:main"
pydoc-markdown = "haystack_pydoc_tools.cli:main"

[project.urls]
Documentation = "https://github.com/unknown/haystack-pydoc-tools#readme"
Issues = "https://github.com/unknown/haystack-pydoc-tools/issues"
Source = "https://github.com/unknown/haystack-pydoc-tools"

[tool.hatch.version]
path = "src/haystack_pydoc_tools/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "ruff",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"

fmt = "ruff check --fix {args}; ruff format {args}"
fmt-check = "ruff check {args} && ruff format --check {args}"

[tool.ruff]
line-length = 120
exclude = ["proposals"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
isort.split-on-trailing-comma = false
select = [
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "C90",   # McCabe cyclomatic complexity
  "E501",  # Long lines
  "EXE",   # flake8-executable
  "F",     # Pyflakes
  "INT",   # flake8-gettext
  "PERF",  # Perflint
  "PL",    # Pylint
  "Q",     # flake8-quotes
  "SIM",   # flake8-simplify
  "SLOT",  # flake8-slots
  "T10",   # flake8-debugger
  "UP006", # non-pep585-annotation (enforce list, dict, etc.)
  "UP007", # non-pep604-annotation-union (enforce X | Y syntax)
  "UP045", # non-pep604-annotation-optional (enforce X | None syntax)
  "W",     # pycodestyle
  "YTT",   # flake8-2020
  "I",     # isort
  # built-in shadowing
  "A001", # builtin-variable-shadowing
  "A002", # builtin-argument-shadowing
  "A003", # builtin-attribute-shadowing
  # docstring rules
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D209", # Closing triple quotes go to new line
  "D205", # 1 blank line required between summary line and description
  "D213", # summary lines must be positioned on the second physical line of the docstring
  "D417", # undocumented-parameter
  "D419", # undocumented-returns
]

ignore = [
  "PERF203", # `try`-`except` within a loop incurs performance overhead
  "PERF401", # Use a list comprehension to create a transformed list
  "PLR1714", # repeated-equality-comparison
  "PLW0603", # global-statement
  "PLW2901", # redefined-loop-name
  "SIM108",  # if-else-block-instead-of-if-exp
  "SIM118",  # in-dict-keys
  # we re-export symbols for correct type checking
  # https://typing.python.org/en/latest/spec/distributing.html#import-conventions
  "PLC0414", # useless-import-alias,
  "PLC0415", # import-outside-top-level,
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
]

[tool.coverage.run]
source_pkgs = ["haystack_pydoc_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/haystack_pydoc_tools/__about__.py",
]

[tool.coverage.paths]
haystack_pydoc_tools = ["src/haystack_pydoc_tools", "*/haystack-pydoc-tools/src/haystack_pydoc_tools"]
tests = ["tests", "*/haystack-pydoc-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
